@@ -1,3 +1,7 @@
+- Support for pasting images and drag and drop nodes in site module
+- Use XCache for caching values
+
+
 - Billing: PDF Templates can have stationery paper
 - Ticket messages styled like conversation and notes display yellow.
 - Files: Users without disk quota can still upload files.
